<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:background="@color/backgroundPanel"
    android:minWidth="@dimen/min_imperial_panel_width"
    android:paddingLeft="12dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/convert_from">

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_7"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginEnd="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:text="@string/key_7"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintEnd_toStartOf="@+id/digit_8"
        app:layout_constraintTop_toTopOf="@+id/digit_8" />


    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_8"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginEnd="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_8"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintEnd_toStartOf="@+id/digit_9"
        app:layout_constraintTop_toTopOf="@+id/digit_9" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_9"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_9"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_4"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_4"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toStartOf="@+id/digit_7"
        app:layout_constraintTop_toBottomOf="@+id/digit_7" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_5"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_5"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toEndOf="@+id/digit_4"
        app:layout_constraintTop_toBottomOf="@+id/digit_8" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_6"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_6"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toEndOf="@+id/digit_5"
        app:layout_constraintTop_toBottomOf="@+id/digit_9" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_1"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_1"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toStartOf="@+id/digit_4"
        app:layout_constraintTop_toBottomOf="@+id/digit_4" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_2"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_2"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toEndOf="@+id/digit_1"
        app:layout_constraintTop_toBottomOf="@+id/digit_5" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_3"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_3"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toEndOf="@+id/digit_2"
        app:layout_constraintTop_toBottomOf="@+id/digit_6" />

    <io.github.mikolasan.imperialrussia.DigitButton
        android:id="@+id/digit_0"
        android:layout_width="@dimen/digit_key_side"
        android:layout_height="@dimen/digit_key_side"
        android:layout_marginTop="@dimen/keypad_margin"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:text="@string/key_0"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/font"
        android:textSize="@dimen/digit_font_size"
        app:layout_constraintStart_toStartOf="@+id/digit_2"
        app:layout_constraintTop_toBottomOf="@+id/digit_2"
        app:layout_constraintBottom_toBottomOf="parent" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_dot"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_dot"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@+id/digit_1"
        app:layout_constraintTop_toBottomOf="@+id/digit_1" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_eval"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_eval"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="@dimen/op_font_size"
        app:layout_constraintEnd_toEndOf="@+id/op_minus"
        app:layout_constraintStart_toStartOf="@+id/digit_3"
        app:layout_constraintTop_toBottomOf="@+id/digit_3" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_clear"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_special"
        android:backgroundTint="@color/floatingButton"
        android:elevation="@dimen/key_elevation"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingRight="2dp"
        android:text="@string/key_clear"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardSpecial"
        android:textSize="@dimen/op_clear_font_size"
        app:layout_constraintStart_toEndOf="@+id/op_back"
        app:layout_constraintTop_toTopOf="@+id/op_back" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_mult"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_mult"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="@dimen/op_font_size"
        app:layout_constraintStart_toEndOf="@+id/op_div"
        app:layout_constraintTop_toTopOf="@+id/op_div" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_plus"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_plus"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="@dimen/op_font_size"
        app:layout_constraintStart_toEndOf="@+id/op_minus"
        app:layout_constraintTop_toTopOf="@+id/op_minus" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_back"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_keyboard_special"
        android:backgroundTint="@color/floatingButton"
        android:elevation="@dimen/key_elevation"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="0dp"
        android:paddingEnd="3dp"
        android:text="@string/key_back"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardSpecial"
        android:textSize="@dimen/op_back_font_size"
        app:layout_constraintBottom_toTopOf="@+id/op_div"
        app:layout_constraintStart_toStartOf="@+id/op_div" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_div"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginBottom="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_div"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="@dimen/op_font_size"
        app:layout_constraintBottom_toTopOf="@+id/op_minus"
        app:layout_constraintStart_toStartOf="@+id/op_minus" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/op_minus"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_func"
        android:backgroundTint="@color/backgroundKeyboardOperation"
        android:elevation="@dimen/key_elevation"
        android:text="@string/key_minus"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardFunc"
        android:textSize="@dimen/op_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/digit_3"
        app:layout_constraintStart_toEndOf="@+id/digit_3" />

    <io.github.mikolasan.imperialrussia.OperationButton
        android:id="@+id/hide_keyboard"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/op_key_side"
        android:layout_height="@dimen/op_key_side"
        android:layout_marginStart="@dimen/keypad_margin"
        android:layout_marginTop="@dimen/keypad_margin"
        android:background="@drawable/bg_keyboard_special"
        android:backgroundTint="@color/floatingButton"
        android:elevation="@dimen/key_elevation"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/key_hide"
        android:textAppearance="@style/ImperialKeypad"
        android:textColor="@color/keyboardSpecial"
        android:textSize="@dimen/op_back_font_size"

        app:layout_constraintStart_toEndOf="@+id/op_eval"
        app:layout_constraintTop_toBottomOf="@+id/op_plus"
        />

</androidx.constraintlayout.widget.ConstraintLayout>