<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background"
    tools:context=".settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_language"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/font" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_locale"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/font" />

            <Spinner
                android:id="@+id/locale_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/font" />

            <Spinner
                android:id="@+id/theme_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"/>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/settings_credits"-->
<!--                android:textAppearance="?attr/textAppearanceSubtitle1"-->
<!--                android:textColor="@color/font" />-->

<!--            <TextView-->
<!--                android:id="@+id/credits_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:text="Credits information goes here..."-->
<!--                android:textColor="@color/font" />-->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/app_name_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font"
            tools:text="Forgotten Standards v1.0.0" />

        <TextView
            android:id="@+id/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font"
            android:text="@string/settings_author" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>